--- a/app/assets/stylesheets/spree/fancy/variables_override.css.scss
+++ b/app/assets/stylesheets/spree/fancy/variables_override.css.scss
@@ -1,6 +1,6 @@
 $c_green:       #ff671d !default;  /* Spree green    */
 $c_red:         #e45353 !default;  /* Error red      */
-$c_blue:        #50A2F3 !default;
+$c_blue:        #ff671d !default;
 $c_orange:      #ff9600 !default;
 
 $layout_background_color:   #FFFFFF !default;
