--- a/app/assets/stylesheets/spree/fancy/variables_override.css.scss
+++ b/app/assets/stylesheets/spree/fancy/variables_override.css.scss
@@ -1,7 +1,10 @@
-$c_green:       #ff671d !default;  /* Spree green    */
+/*--------------------------------------*/
+/* Colors
+/*--------------------------------------*/
+$c_green:       #f17038 !default;  /* Spree green    */
 $c_red:         #e45353 !default;  /* Error red      */
-$c_blue:        #ff671d !default;
-$c_orange:      #ff9600 !default;
+$c_blue:        #f17038 !default;
+$c_orange:      #383737 !default;
 
 $layout_background_color:   #FFFFFF !default;
 $title_text_color:          #404042 !default;
