--- a/app/views/spree/home/_slider.html.erb
+++ b/app/views/spree/home/_slider.html.erb
@@ -1,5 +1,5 @@
 <% if Spree::Slide.published.count > 0 %>
-<div id="home-slider">
+<div id="home-slider" class='123'>
 	<ul>
 	<% Spree::Slide.published.order('position ASC').each do |s| %>
         <li>
