--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -6,7 +6,7 @@
 <script type="text/javascript">
 $(document).ready(function(){
 $('#subheader .container').css('width','100%');
-$('#subheader .container').css('height','344px !important');
+$('#subheader .container').css('height','344px');
 $('.subheader-wrapper').css('padding','0px');
 });
 </script>
