--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -6,17 +6,21 @@
       <br>
       <br>
       <div class="phone">
-        <a href="callto:012341234567">01-234-1234-567</a>
+        <a href="callto:18772138399"><b>1-877-213-8399</b></a>
         </div>
-      <br>
       <div class="email">
         <a href="mailto:support@watteam.com">support@watteam.com</a>
       </div>
-      <br>
       <div class="address">
-        Spree Demo Store 01
+        <b>WATTEAM Headquarters</b>
         <br>
-        Washington DC, USA
+        Suite 111
+		<br>
+		17780 Fitch Avenue
+		<br>
+		Irvine, CA 92604
+		<br>
+		USA
       </div>
     </div>
     
