--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -7,9 +7,30 @@
 $(document).ready(function(){
 $('#subheader .container').css('width','100%');
 $('.subheader-wrapper').css('padding','0px');
-});
-</script>
 
+$('#wrapper').css('position','static');	
+$('html').css('position','relative');	
+});
+
+function close_popup()
+{
+	$('.popup-main').hide();
+}
+</script>
+<div class="popup-main"><div class="popup-inner"><div class="wrapper-pop"><div class="wrapper-container">
+<h1>Sign up</h1>
+<h4>to receive product updates<br> and special offers!</h4>
+<p>Get up to date Powerbeat news</p>
+<div class="newsletter-main">
+<div class="newsletter-inner">
+<div class="newsletter-wrap">
+<input type="text" name="email" placeholder="Email">
+<input type="submit" name="submit">
+</div>
+</div>
+</div>
+<div class="model-close" onclick="close_popup();">X</div></div></div></div>
+</div>
 <div id="welcome-message">
   <div class="container">
     <h1>
