--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -9,12 +9,14 @@ $('#subheader .container').css('width','100%');
 $('.subheader-wrapper').css('padding','0px');
 
 $('#wrapper').css('position','static');	
+$('#wrapper').css('width','auto');
 $('html').css('position','relative');	
 });
 
 function close_popup()
 {
 	$('.popup-main').hide();
+	$('#wrapper').css('width','960px');
 }
 </script>
 <div class="popup-main"><div class="popup-inner"><div class="wrapper-pop"><div class="wrapper-container">
