--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -16,6 +16,7 @@ $('html').css('position','relative');
 function close_popup()
 {
 	$('.popup-main').hide();
+	$('#wrapper').css('position','relative');	
 	$('#wrapper').css('width','960px');
 }
 </script>
