--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -9,8 +9,8 @@ $('#subheader .container').css('width','100%');
 $('.subheader-wrapper').css('padding','0px');
 
 $('#wrapper').css('position','static');	
-$('#wrapper').css('width','auto');
-$('html').css('position','relative');	
+$('html').css('position','relative');
+$('html').css('overflow-x','hidden');	
 });
 
 function close_popup()
