--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -20,7 +20,9 @@ function close_popup()
 	$('#wrapper').css('width','960px');
 }
 </script>
-<div class="popup-main"><div class="popup-inner"><div class="wrapper-pop"><div class="wrapper-container">
+<div class="popup-main"><div class="popup-inner"><div class="wrapper-pop">
+<div class="model-close" onclick="close_popup();">X</div>
+<div class="wrapper-container">
 <h1>Sign up</h1>
 <h4>to receive product updates<br> and special offers!</h4>
 <p>Get up to date Powerbeat news</p>
@@ -81,7 +83,7 @@ function close_popup()
 </div>
 </div>
 </div>
-<div class="model-close" onclick="close_popup();">X</div></div></div></div>
+</div></div></div>
 </div>
 <div id="welcome-message">
   <div class="container">
