--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -97,7 +97,8 @@
 </div>
 </div>
 </div>
-
+<%
+=begin %>
 <!--
 <div class="container">
   <% if @featured_products %>
@@ -125,7 +126,8 @@
   <% end %>
 </div>
 -->
-
+<%
+=end %>
 <script type="text/javascript">
 $(document).ready(function(){
 $('#subheader .container').css('width','100%');
