--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,5 +1,7 @@
 <header id="header" class="row" data-hook>
+<div class="header-logo-main">
   <figure id="logo" class="columns six" data-hook><%= logo %></figure>
+  </div>
   <div class="main-menu-top">
   <%= render :partial => 'spree/shared/nav_bar' %>
   <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>
