--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header id="header" class="row" data-hook>
 <div class="header-logo-main">
-  <figure id="logo" class="columns six" data-hook><%= logo %></figure>
+  <figure id="logo" class="columns six" data-hook><%= logo %><div class="logo-sub-t">Innovation with a spin  </div></figure>
   </div>
   <div class="main-menu-top">
   <%= render :partial => 'spree/shared/nav_bar' %>
