--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -1,14 +1,19 @@
 <footer id="footer" class="sixteen columns" data-hook>
-<div class="bottom-menu clearfix">
+<div class="bottom-menu ">
+
+ <div class="container">
 		<ul id="menu-foomenu" class="clearfix"><li id="menu-item-503" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-503"><a href="http://watteam.com/benefits/">Benefits</a></li>
 <li id="menu-item-504" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-504"><a href="http://watteam.com/technology/">Technology</a></li>
-<li id="menu-item-505" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-505"><a href="http://watteam.com/news/gallery/">Gallery</a></li>
+<li id="menu-item-505" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-505"><a href="http://watteam.com/gallery/">Gallery</a></li>
 <li id="menu-item-502" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-13 current_page_item menu-item-502"><a href="http://watteam.com/about/">About</a></li>
 <li id="menu-item-501" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-501"><a href="http://watteam.com/partners/">Partners</a></li>
-<li id="menu-item-507" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="http://watteam.com/news/press/">PRESS</a></li>
+<li id="menu-item-507" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="http://watteam.com/press/">PRESS</a></li>
 <li id="menu-item-506" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-506"><a href="http://watteam.com/faq/">FAQ</a></li>
 <li id="menu-item-500" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-500"><a href="http://watteam.com/contact/">Contact</a></li>
-</ul>                            </div>
+</ul> 
+                   
+				   <div>
+				           </div>
 
   <div class="container">
     
