--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -12,7 +12,7 @@
 <li id="menu-item-500" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-500"><a href="http://watteam.com/contact/">Contact</a></li>
 </ul> 
                    
-				   <div>
+				   </div>
 				           </div>
 
   <div class="container">
