--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -15,29 +15,16 @@
 				   </div>
 				           </div>
 
-  <div class="container">
+  <div class="container bottom-second">
     
-    <div class="four columns">
-      <%= image_tag "spree/fancy/logo-white.png", :alt => "Spree Demo Theme", :id => "footer-logo" %>
-      <br>
-      <br>
-      <div class="phone">
-        <a href="callto:18772138399"><b>1-877-213-8399</b></a>
-        </div>
-      <div class="email">
-        <a href="mailto:support@watteam.com">support@watteam.com</a>
-      </div>
-      <div class="address">
-        <b>WATTEAM Headquarters</b>
-        <br>
-        Suite 111
-		<br>
-		17780 Fitch Avenue
-		<br>
-		Irvine, CA 92604
-		<br>
-		USA
-      </div>
+    <div class="three columns">
+     <h5>Our Best Offers</h5>
+      <div class="textwidget">WATTEAM Headquarters, 17780<br>
+Fitch Avenue, Suite 111,<br>
+Irvine CA, 92604 USA.<br>
+<a href="mailto:/info@watteam.com" onclick="__gaTracker('send', 'event', 'mailto', '/info@watteam.com');">info@watteam.com</a><br>
+1-877-213-8399<br></div>
+     
     </div>
     
     <div class="four columns">
