--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -18,26 +18,56 @@
   <div class="container bottom-second">
     
     <div class="three columns">
-     <h5>Our Best Offers</h5>
-      <div class="textwidget">WATTEAM Headquarters, 17780<br>
+     <h5>CONTACT</h5>
+    <p>  WATTEAM Headquarters, 17780<br>
 Fitch Avenue, Suite 111,<br>
 Irvine CA, 92604 USA.<br>
 <a href="mailto:/info@watteam.com" onclick="__gaTracker('send', 'event', 'mailto', '/info@watteam.com');">info@watteam.com</a><br>
-1-877-213-8399<br></div>
-     
+1-877-213-8399<br></p>     
     </div>
     
-    <div class="four columns">
-      <h5>Our Best Offers</h5>
-      <ul>
-        <li><a href="http://watteam.com/news-watteam/" target="_blank">Watteam news</a></li>
-        <li><a href="http://watteam.com/technology/" target="_blank">Technology</a></li>
-        <li><a href="http://watteam.com/benefits/" target="_blank">Benefits</a></li>
-        <li><a href="http://watteam.com/support/" target="_blank">Support</a></li>
-      </ul>
+    <div class="three columns">
+      <h5>Newsletter</h5>
+     <div id="mc_embed_signup">
+
+<form action="//watteam.us10.list-manage.com/subscribe/post?u=a111cc0531d37f010c883cb18&amp;id=67cb1e31c9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+    <div id="mc_embed_signup_scroll">
+
+	
+
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+
+<div class="mc-field-group">
+
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+
+</label>
+       	<input type="text" value="" name="first_name" class="required" id="mce-FNAME" placeholder="Name">
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
+	 <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+</div>
+
+	<div id="mce-responses">
+
+		<div class="response" id="mce-error-response" style="display:none"></div>
+
+		<div class="response" id="mce-success-response" style="display:none"></div>
+
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_a111cc0531d37f010c883cb18_67cb1e31c9" tabindex="-1" value=""></div>
+
+   
+
+    </div>
+
+</form>
+
+</div>
     </div>
     
-    <div class="four columns">
+    <div class="three columns">
       <h5>Regular Services</h5>
       <ul>
         <li><a href="http://watteam.com/about/" target="_blank">About</a></li>
@@ -47,12 +77,7 @@ Irvine CA, 92604 USA.<br>
       </ul>
     </div>
     
-    <div class="four columns">
-      <h5>Important info</h5>
-      <p>
-Based in California, with all R&D performed in Israel, Watteam is made by cyclists, for cyclists.
-      </p>
-    </div>
+ 
     
   </div>
 </footer>
