--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -36,14 +36,18 @@ Irvine CA, 92604 USA.<br>
 
 	
 
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+
 
 <div class="mc-field-group">
 
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+	<label for="mce-FNAME">Name:<span class="asterisk">*</span>
 
 </label>
        	<input type="text" value="" name="first_name" class="required" id="mce-FNAME" placeholder="Name">
+		
+		<label for="mce-EMAIL">Email:<span class="asterisk">*</span>
+
+</label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
 	 <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
 </div>
