--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -74,7 +74,7 @@ Irvine CA, 92604 USA.<br>
     </div>
     
     <div class="three columns">
-      <h5>Regular Services</h5>
+      <h5>SOCIALIZE WITH US</h5>
       <ul>
         <li><a href="http://watteam.com/about/" target="_blank">About</a></li>
         <li><a href="http://watteam.com/meet-the-team/" target="_blank">Meet the Team</a></li>
