--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -86,4 +86,13 @@ Irvine CA, 92604 USA.<br>
  
     
   </div>
+ 
+  <div id="bottom-copyright" class="clearfix">
+   <div class="container">
+                <ul class="clearfix">
+                    <li>© 2014 WATTEAM - All rights reserved</li>
+                    <li>Legal | Terms and Conditions</li>
+                </ul>
+            </div>
+			</div>
 </footer>
