--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -49,7 +49,7 @@ Irvine CA, 92604 USA.<br>
 
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
-	 <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+	 <input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
 </div>
 
 	<div id="mce-responses">
