--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -24,8 +24,45 @@
 
 </style>
 
+<div id="mc_embed_signup">
 
+<form action="//watteam.us10.list-manage.com/subscribe/post?u=a111cc0531d37f010c883cb18&amp;id=67cb1e31c9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 
+    <div id="mc_embed_signup_scroll">
+
+	
+
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+
+<div class="mc-field-group">
+
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+
+</label>
+
+	<input type="email" value="" name="EMAIL1" class="required email" id="mce-EMAIL1" placeholder="Email">
+	 <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+</div>
+
+	<div id="mce-responses">
+
+		<div class="response" id="mce-error-response" style="display:none"></div>
+
+		<div class="response" id="mce-success-response" style="display:none"></div>
+
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_a111cc0531d37f010c883cb18_67cb1e31c9" tabindex="-1" value=""></div>
+
+   
+
+    </div>
+
+</form>
+
+</div>
+
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL1';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 </div>
 </div>
 </div>
