--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -40,7 +40,7 @@
 
 </label>
 
-	<input type="email" value="" name="EMAIL1" class="required email" id="mce-EMAIL1" placeholder="Email">
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
 	 <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
 </div>
 
@@ -62,7 +62,7 @@
 
 </div>
 
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL1';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
 </div>
 </div>
 </div>
