--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -75,12 +75,7 @@ Irvine CA, 92604 USA.<br>
     
     <div class="three columns">
       <h5>SOCIALIZE WITH US</h5>
-      <ul>
-        <li><a href="http://watteam.com/about/" target="_blank">About</a></li>
-        <li><a href="http://watteam.com/meet-the-team/" target="_blank">Meet the Team</a></li>
-        <li><a href="http://watteam.com/partners/" target="_blank">Partners</a></li>
-		<li><a href="http://watteam.com/contact/" target="_blank">Contact</a></li>
-      </ul>
+      <% asset('FACEBOOK.png') %>
     </div>
     
  
