--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -75,7 +75,7 @@ Irvine CA, 92604 USA.<br>
     
     <div class="three columns">
       <h5>SOCIALIZE WITH US</h5>
-      <% asset('FACEBOOK.png') %>
+      <%= image_tag 'FACEBOOK.png' %>
     </div>
     
  
