--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -75,7 +75,20 @@ Irvine CA, 92604 USA.<br>
     
     <div class="three columns">
       <h5>SOCIALIZE WITH US</h5>
+	  <ul class="bottom-social">
+	  <li>
       <%= image_tag 'FACEBOOK.png' %>
+	  </li>
+	  <li>
+      <%= image_tag 'TW.png' %>
+	  </li>
+	  <li>
+      <%= image_tag 'LINKED.png' %>
+	  </li>
+	  <li>
+      <%= image_tag 'YU.png' %>
+	  </li>
+	  </ul>
     </div>
     
  
