--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -77,16 +77,16 @@ Irvine CA, 92604 USA.<br>
       <h5>SOCIALIZE WITH US</h5>
 	  <ul class="bottom-social">
 	  <li>
-       <a href="https://www.facebook.com/WatteamPowerBeat" taget="_blank"><%= image_tag 'FACEBOOK.png' %></a>
+       <a href="https://www.facebook.com/WatteamPowerBeat" target="_blank"><%= image_tag 'FACEBOOK.png' %></a>
 	  </li>
 	  <li>
-      <a href="https://twitter.com/WatteamOn" taget="_blank"><%= image_tag 'TW.png' %></a>
+      <a href="https://twitter.com/WatteamOn" target="_blank"><%= image_tag 'TW.png' %></a>
 	  </li>
 	  <li>
-      <a href="https://www.linkedin.com/company/watteam-ltd-?trk=tyah&trkInfo=tarId%3A1406659274171%2Ctas%3Awatteam%2Cidx%3A1-1-1" taget="_blank"><%= image_tag 'LINKED.png' %></a>
+      <a href="https://www.linkedin.com/company/watteam-ltd-?trk=tyah&trkInfo=tarId%3A1406659274171%2Ctas%3Awatteam%2Cidx%3A1-1-1" target="_blank"><%= image_tag 'LINKED.png' %></a>
 	  </li>
 	  <li>
-     <a href="https://www.youtube.com/user/WatteamPowerBeat/feed" taget="_blank"> <%= image_tag 'YU.png' %></a>
+     <a href="https://www.youtube.com/user/WatteamPowerBeat/feed" target="_blank"> <%= image_tag 'YU.png' %></a>
 	  </li>
 	  </ul>
     </div>
