--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -50,6 +50,8 @@ Irvine CA, 92604 USA.<br>
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
 	 <input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
+	 
+	 <p class="sf_required_fields_msg" id="requiredfieldsmsg"><sup><span class="required">*</span></sup> These fields are required.</p>
 </div>
 
 	<div id="mce-responses">
