--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -130,12 +130,12 @@
 =end %>
 <script type="text/javascript">
 $(document).ready(function(){
-$('#subheader .container').css('width','100%');
+//$('#subheader .container').css('width','100%');
 $('.subheader-wrapper').css('padding','0px');
 
-$('#wrapper').css('position','static');	
-$('html').css('position','relative');
-$('html').css('overflow-x','hidden');	
+//$('#wrapper').css('position','static');	
+//$('html').css('position','relative');
+//$('html').css('overflow-x','hidden');	
 
 $('.popup-main').fadeIn('slow');
 
