--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header id="header" class="row" data-hook>
 <div class="header-logo-main">
-  <figure id="logo" class="columns six" data-hook><%= logo %><span class="logo-sub-t"> | Innovation with a spin  </span><span class="top-phone-no">1-877-213-8399 </span></figure>
+  <figure id="logo" class="columns six" data-hook><%= logo %><span class="logo-sub-t"> | Innovation with a spin  </span><span class="top-phone-no"><%= image_tag 'phone-contact.png' %>1-877-213-8399 </span></figure>
   </div>
   <div class="main-menu-top">
   <%= render :partial => 'spree/shared/nav_bar' %>
