--- a/app/views/spree/home/_slider.html.erb
+++ b/app/views/spree/home/_slider.html.erb
@@ -3,7 +3,7 @@
 	<ul>
 	<% Spree::Slide.published.order('position ASC').each do |s| %>
         <li>
-          <%= link_to image_tag(s.slide_image.url), url_for(s.slide_link) %>
+          <%= link_to image_tag(s.slide_image.url, size: "1600x500"), url_for(s.slide_link) %>
         </li>
 	<% end %>
 	</ul>
