--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -131,7 +131,7 @@
 <script type="text/javascript">
 $(document).ready(function(){
 $('#subheader .container').css('width','100%');
-$('#subheader .container').css('height','320px');
+/*$('#subheader .container').css('height','320px');*/
 $('.subheader-wrapper').css('padding','0px');
 
 //$('#wrapper').css('position','static');	
