--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -2,6 +2,13 @@
 <% content_for :subheader do %>
   <%= render 'slider' %>
 <% end %>
+<div id="homepage-logo" style="right: 124.5px;">
+                               <div id="homepage-caption">
+                <p id="powerbeat-sub-subtitle">» Actual left &amp; right power measurement</p>
+                <p id="powerbeat-sub-subtitle">» Pro level technology at entry-level price</p>
+                <p id="powerbeat-sub-subtitle">» Works with all crank types &amp; head units</p>
+              </div>
+            </div>
 </div>
 <div class="popup-main"><div class="popup-inner"><div class="wrapper-pop">
 <div class="model-close" onclick="close_popup();">X</div>
@@ -130,8 +137,6 @@
 =end %>
 <script type="text/javascript">
 $(document).ready(function(){
-$('#subheader .container').css('width','100%');
-/*$('#subheader .container').css('height','320px');*/
 $('.subheader-wrapper').css('padding','0px');
 
 //$('#wrapper').css('position','static');	
