--- a/app/views/spree/home/_slider.html.erb
+++ b/app/views/spree/home/_slider.html.erb
@@ -1,6 +1,6 @@
 <% if Spree::Slide.published.count > 0 %>
-<div id="home-slider">
-	<ul>
+<div id="home-slider" class="flexslider">
+	<ul class="slides">
 	<% Spree::Slide.published.order('position ASC').each do |s| %>
         <li>
           <%= link_to image_tag(s.slide_image.url, size: "1600x500"), url_for(s.slide_link) %>
