--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -130,12 +130,14 @@
 =end %>
 <script type="text/javascript">
 $(document).ready(function(){
-$('.subheader-wrapper').css('padding','0px');
-$('#subheader .container').css('width','100%');
+//$('.subheader-wrapper').css('padding','0px');
+//$('#subheader .container').css('width','100%');
 //$('#wrapper').css('position','static');	
 //$('html').css('position','relative');
 //$('html').css('overflow-x','hidden');	
-
+$('.flexslider').flexslider({
+    animation: "slide"
+  });
 $('.popup-main').fadeIn('slow');
 
 });
