--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -144,6 +144,8 @@ $('.flexslider').flexslider({
 	direction:"horizontal",
 	reverse:false,
 	animationSpeed:1000,
+	prevText:"&lt;",
+	nextText:"&gt;",
 	slideshow:true
   });
 $('.popup-main').fadeIn('slow');
