--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -3,8 +3,29 @@
   <figure id="logo" class="columns six" data-hook><%= logo %><span class="logo-sub-t">  Innovation with a spin  </span><!--<span class="top-phone-no"><%= image_tag 'phone-contact.png' %><p>1-877-213-8399</p> </span>--></figure>
   </div>
   <div class="main-menu-top">
- <%= render :partial => 'spree/shared/nav_bar' %>
-  <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>
-  
+  <!--<%= render :partial => 'spree/shared/nav_bar' %>
+  <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>-->
+  <ul id="menu-mainmenu" class=""><li><a href="#">PRODUCT</a>
+<ul class="sub-menu">
+	<li><a href="http://watteam.com/benefits/">Benefits</a></li>
+	<li><a href="http://watteam.com/technology/">Technology</a></li>
+	<li><a href="http://watteam.com/news/gallery/">Gallery</a></li>
+</ul>
+</li>
+<li><a href="#">COMPANY</a>
+<ul class="sub-menu">
+	<li><a href="http://watteam.com/about/">About</a></li>
+	<li><a href="http://watteam.com/partners/">Partners</a></li>
+	<li><a href="http://watteam.com/news/press/">PRESS</a></li>
+</ul>
+</li>
+<li><a href="#">SUPPORT</a>
+<ul class="sub-menu">
+	<li><a href="http://watteam.com/faq/">FAQ</a></li>
+	<li><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
+</ul>
+</li>
+<li><a href="http://watteam.com/contact/">Contact</a></li>
+</ul>
   </div>
 </header>
