--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -17,7 +17,7 @@
 
   <div class="container bottom-second">
     
-    <div class="three columns">
+    <div class="three columns f_left">
      <h5>CONTACT</h5>
     <p>  WATTEAM Headquarters, 17780<br>
 Fitch Avenue, Suite 111,<br>
@@ -26,7 +26,7 @@ Irvine CA, 92604 USA.<br>
 1-877-213-8399<br></p>     
     </div>
     
-    <div class="three columns">
+    <div class="three columns f_mid">
       <h5>Newsletter</h5>
      <div id="mc_embed_signup">
 
@@ -75,7 +75,7 @@ Irvine CA, 92604 USA.<br>
 
     </div>
     
-    <div class="three columns">
+    <div class="three columns f_right">
       <h5>SOCIALIZE WITH US</h5>
 	  <ul class="bottom-social">
 	  <li>
