--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -1,4 +1,18 @@
 <footer id="footer" class="sixteen columns" data-hook>
+
+<div id="bottom-socials-wrapper">
+            	
+                <div id="bottom-socials">
+                 	<ul class="social-icon">
+                     	<li><a id="facebook" href="https://www.facebook.com/WatteamPowerBeat" target="_blank">   <%= image_tag("f_facebook.png", :alt => "facebook") %></a></li>
+                        <li><a id="twitter" href="https://twitter.com/WatteamOn" target="_blank"> <%= image_tag("f_twitter.png", :alt => "twitter") %></a></li>
+                        <li><a id="linkdin" href="https://www.linkedin.com/company/5283843?trk=tyah&amp;trkInfo=tarId%3A1406659274171%2Ctas%3Awatteam%2Cidx%3A1-1-1" target="_blank"><%= image_tag("f_linkedin.png", :alt => "linkedin") %></a></li>
+                        <li><a id="youtube" href="https://www.youtube.com/user/WatteamPowerBeat/feed" target="_blank"><%= image_tag("f_youtube.png", :alt => "youtube") %></a></li>
+                    </ul>
+                </div>
+            	            </div>
+							
+							
 <div class="bottom-menu ">
 
  <div class="container">
