--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -26,6 +26,7 @@
 	<li><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
 </ul>
 </li>
+<li><a href="#">Powerbeat</a></li>
 <li><a href="http://watteam.com/contact/">Contact</a></li>
 </ul>
   </div>
