--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer id="footer" class="sixteen columns" data-hook>
 
-<div id="bottom-socials-wrapper">
+<div class="bottom-socials-wrapper">
             	
                 <div id="bottom-socials">
                  	<ul class="social-icon">
