--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -4,9 +4,9 @@
   <figure id="logo" class="columns six" data-hook><%= logo %><span class="logo-sub-t">&nbsp;Innovation with a spin  </span><!--<span class="top-phone-no"><%= image_tag 'phone-contact.png' %><p>1-877-213-8399</p> </span>--></figure>
   </div>
   <div class="main-menu-top">
-  <!--<%= render :partial => 'spree/shared/nav_bar' %>
-  <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>-->
-  <ul id="menu-mainmenu" class=""><li class="pro_arro"><a href="#">PRODUCT</a>
+  <%= render :partial => 'spree/shared/nav_bar' %>
+  <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>
+  <!--<ul id="menu-mainmenu" class=""><li class="pro_arro"><a href="#">PRODUCT</a>
 <ul class="sub-menu">
 	<li><a href="http://watteam.com/benefits/">Benefits</a></li>
 	<li><a href="http://watteam.com/technology/">Technology</a></li>
@@ -28,6 +28,6 @@
 </li>
 <li><a href="#">Powerbeat</a></li>
 <li><a href="http://watteam.com/contact/">Contact</a></li>
-</ul>
+</ul>-->
   </div>
 </header>
