--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <header id="header" class="row" data-hook>
 <div class="header-logo-main">
-  <figure id="logo" class="columns six" data-hook><a href="http://watteam.com"><%= image_tag 'spree_50.png' %></a><span class="logo-sub-t">&nbsp;Innovation with a spin  </span><!--<span class="top-phone-no"><%= image_tag 'phone-contact.png' %><p>1-877-213-8399</p> </span>--></figure>
+  <figure id="logo" class="columns six" data-hook><a href="http://watteam.com"><%= image_tag 'spree_50.png' %></a><span class="logo-sub-t">&nbsp;&nbsp; Innovation with a spin  </span><!--<span class="top-phone-no"><%= image_tag 'phone-contact.png' %><p>1-877-213-8399</p> </span>--></figure>
   </div>
   <div class="main-menu-top">
   <!--<%= render :partial => 'spree/shared/nav_bar' %>
