--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -57,12 +57,12 @@ Irvine CA, 92604 USA.<br>
 	<label for="mce-FNAME">Name:<span class="asterisk">*</span>
 
 </label>
-       	<input type="text" value="" name="first_name" class="required" id="mce-FNAME" placeholder="Name">
+       	<input type="text" value="" name="first_name" class="required" id="mce-FNAME" placeholder="">
 		
 		<label for="mce-EMAIL">Email:<span class="asterisk">*</span>
 
 </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="">
 	 <input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
 	 
 	 <p class="sf_required_fields_msg" id="requiredfieldsmsg"><sup><span class="required">*</span></sup> These fields are required.</p>
