--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -29,5 +29,34 @@
 <li><a href="#">Powerbeat</a></li>
 <li><a href="http://watteam.com/contact/">Contact</a></li>
 </ul>
+
+	<ul class="togle_menu_mobile">
+		<li class="pro_arro">
+			<a href="#">PRODUCT</a>
+			<ul class="submenu">
+				<li>sub1</li>
+				<li>sub1</li>
+				<li>sub1</li>
+			</ul>
+		</li>
+		<li class="pro_arro">
+			<a href="#">COMPANY</a>
+			<ul class="submenu">
+				<li>sub1</li>
+				<li>sub1</li>
+				<li>sub1</li>
+			</ul>
+		</li>
+		<li class="pro_arro">
+			<ul class="submenu">
+				<li>sub1</li>
+				<li>sub1</li>
+				<li>sub1</li>
+			</ul>
+		</li>
+		<li>menu1</li>
+		<li>menu2</li>
+		<li>menu3</li>
+	</ul>
   </div>
 </header>
