--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -28,8 +28,9 @@
 </li>
 <li><a href="#">Powerbeat</a></li>
 <li><a href="http://watteam.com/contact/">Contact</a></li>
+<div class="claer"></div>
 </ul>
-
+<div class="claer"></div>
 	<ul class="togle_menu_mobile">
 		<li class="pro_arro">
 			<a href="#">PRODUCT</a>
@@ -57,6 +58,8 @@
 		<li>menu1</li>
 		<li>menu2</li>
 		<li>menu3</li>
+		<div class="claer"></div>
 	</ul>
+	<div class="claer"></div>
   </div>
 </header>
