--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -32,32 +32,32 @@
 </ul>
 <div class="claer"></div>
 	<ul class="togle_menu_mobile">
-		<li class="pro_arro">
+		<li class="pro_arro menu_mo">
 			<a href="#">PRODUCT</a>
 			<ul class="submenu">
-				<li>sub1</li>
-				<li>sub1</li>
-				<li>sub1</li>
+				<li><a href="http://watteam.com/benefits/">Benefits</a></li>
+				<li><a href="http://watteam.com/technology/">Technology</a></li>
+				<li><a href="http://watteam.com/news/gallery/">Gallery</a></li>
 			</ul>
 		</li>
-		<li class="pro_arro">
+		<li class="pro_arro menu_mo">
 			<a href="#">COMPANY</a>
 			<ul class="submenu">
-				<li>sub1</li>
-				<li>sub1</li>
-				<li>sub1</li>
+					<li><a href="http://watteam.com/about/">About</a></li>
+					<li><a href="http://watteam.com/partners/">Partners</a></li>
+					<li><a href="http://watteam.com/news/press/">PRESS</a></li>
 			</ul>
 		</li>
-		<li class="pro_arro">
+		<li class="pro_arro menu_mo">
 			<ul class="submenu">
 				<li>sub1</li>
 				<li>sub1</li>
 				<li>sub1</li>
 			</ul>
 		</li>
-		<li>menu1</li>
-		<li>menu2</li>
-		<li>menu3</li>
+		<li class="pro_arro menu_mo"> menu1</li>
+		<li class="pro_arro menu_mo"> menu2</li>
+		<li class="pro_arro menu_mo">menu3</li>
 		<div class="claer"></div>
 	</ul>
 	<div class="claer"></div>
