--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -49,15 +49,15 @@
 			</ul>
 		</li>
 		<li class="pro_arro menu_mo">
-			<ul class="submenu">
-				<li>sub1</li>
-				<li>sub1</li>
-				<li>sub1</li>
-			</ul>
+			<a href="#">SUPPORT</a>
+				<ul class="sub-menu">
+					<li><a href="http://watteam.com/faq/">FAQ</a></li>
+					<li><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
+				</ul>
 		</li>
-		<li class="pro_arro menu_mo"> menu1</li>
-		<li class="pro_arro menu_mo"> menu2</li>
-		<li class="pro_arro menu_mo">menu3</li>
+		<li><a href="#">Powerbeat</a></li>
+		<li><a href="http://watteam.com/contact/">Contact</a></li>
+
 		<div class="claer"></div>
 	</ul>
 	<div class="claer"></div>
