--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -55,8 +55,8 @@
 					<li><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
 				</ul>
 		</li>
-		<li><a href="#">Powerbeat</a></li>
-		<li><a href="http://watteam.com/contact/">Contact</a></li>
+		<li class="pro_arro menu_mo"><a href="#">Powerbeat</a></li>
+		<li class="pro_arro menu_mo"><a href="http://watteam.com/contact/">Contact</a></li>
 
 		<div class="claer"></div>
 	</ul>
