--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -46,6 +46,7 @@
 					<li><a href="http://watteam.com/about/">About</a></li>
 					<li><a href="http://watteam.com/partners/">Partners</a></li>
 					<li><a href="http://watteam.com/news/press/">PRESS</a></li>
+					<div class="claer"></div>
 			</ul>
 		</li>
 		<li class="pro_arro menu_mo">
@@ -54,6 +55,7 @@
 					<li><a href="http://watteam.com/faq/">FAQ</a></li>
 					<li><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
 				</ul>
+				<div class="claer"></div>
 		</li>
 		<li class="pro_arro menu_mo"><a href="#">Powerbeat</a></li>
 		<li class="pro_arro menu_mo"><a href="http://watteam.com/contact/">Contact</a></li>
