--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -32,7 +32,7 @@
 </ul>
 <div class="claer"></div>
 	<ul class="togle_menu_mobile">
-		<li class="pro_arro menu_mo">
+		<li class="menu_mo">
 			<a href="#">PRODUCT</a>
 			<ul class="submenu">
 				<li><a href="http://watteam.com/benefits/">Benefits</a></li>
@@ -40,17 +40,17 @@
 				<li><a href="http://watteam.com/news/gallery/">Gallery</a></li>
 			</ul>
 		</li>
-		<li class="pro_arro menu_mo">
+		<li class="menu_mo">
 			<a href="#">COMPANY</a>
 			<ul class="submenu">
 					<li><a href="http://watteam.com/about/">About</a></li>
 					<li><a href="http://watteam.com/partners/">Partners</a></li>
 					<li><a href="http://watteam.com/news/press/">PRESS</a></li>
-
+					<div class="claer"></div>
 			</ul>
 			<div class="claer"></div>
 		</li>
-		<li class="pro_arro menu_mo">
+		<li class="menu_mo">
 			<a href="#">SUPPORT</a>
 				<ul class="sub-menu">
 					<li><a href="http://watteam.com/faq/">FAQ</a></li>
@@ -58,8 +58,8 @@
 				</ul>
 				<div class="claer"></div>
 		</li>
-		<li class="pro_arro menu_mo"><a href="#">Powerbeat</a></li>
-		<li class="pro_arro menu_mo"><a href="http://watteam.com/contact/">Contact</a></li>
+		<li class="menu_mo"><a href="#">Powerbeat</a></li>
+		<li class="menu_mo"><a href="http://watteam.com/contact/">Contact</a></li>
 
 		<div class="claer"></div>
 	</ul>
