--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -6,7 +6,7 @@
   <div class="main-menu-top">
   <!--<%= render :partial => 'spree/shared/nav_bar' %>
   <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>-->
-  <ul id="menu-mainmenu" class=""><li class="pro_arro"><a href="#">PRODUCT</a>
+  <ul id="menu-mainmenu" class=""><li class="pro_arro"><a class="mobile-product" href="#">PRODUCT</a>
 <ul class="sub-menu">
 	<li><a href="http://watteam.com/benefits/">Benefits</a></li>
 	<li><a href="http://watteam.com/technology/">Technology</a></li>
