--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,4 +1,7 @@
 <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+$( document ).ready(function() {
+ alert('aaaaaaa');
+});
 <header id="header" class="row" data-hook>
 <div class="header-logo-main">
   <figure id="logo" class="columns six" data-hook><a href="http://watteam.com"><%= image_tag 'spree_50.png' %></a><span class="logo-sub-t">&nbsp;&nbsp; Innovation with a spin  </span><!--<span class="top-phone-no"><%= image_tag 'phone-contact.png' %><p>1-877-213-8399</p> </span>--></figure>
@@ -31,7 +34,8 @@
 <div class="claer"></div>
 </ul>
 <div class="claer"></div>
-	<ul class="togle_menu_mobile">
+<a href="#" id="mobile-menu-open">Menu</a>
+	<ul class="togle_menu_mobile" style="disply:none;">
 		<li class="menu_mo">
 			<a href="#" class="mobile-product">PRODUCT</a>
 			<ul class="submenu">
