--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,7 +1,11 @@
 <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<script>
 $( document ).ready(function() {
- alert('aaaaaaa');
+$('#mobile-menu-open').click(function() {
+  $( ".togle_menu_mobile" ).toggle('slide');
 });
+});
+</script>
 <header id="header" class="row" data-hook>
 <div class="header-logo-main">
   <figure id="logo" class="columns six" data-hook><a href="http://watteam.com"><%= image_tag 'spree_50.png' %></a><span class="logo-sub-t">&nbsp;&nbsp; Innovation with a spin  </span><!--<span class="top-phone-no"><%= image_tag 'phone-contact.png' %><p>1-877-213-8399</p> </span>--></figure>
@@ -35,7 +39,7 @@ $( document ).ready(function() {
 </ul>
 <div class="claer"></div>
 <a href="#" id="mobile-menu-open">Menu</a>
-	<ul class="togle_menu_mobile" style="disply:none;">
+	<ul class="togle_menu_mobile" style="display:none;">
 		<li class="menu_mo">
 			<a href="#" class="mobile-product">PRODUCT</a>
 			<ul class="submenu">
