update link top

--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -66,7 +66,7 @@ $('#mobile-menu-open').click(function() {
 				</ul>
 				<div class="claer"></div>
 		</li>
-		<li class="menu_mo"><a href="#">Powerbeat</a></li>
+		<li class="menu_mo"><a href="https://watteam.herokuapp.com/products/pbprometer1">Pre-Order</a></li>
 		<li class="menu_mo"><a href="http://watteam.com/contact/">Contact</a></li>
 
 		<div class="claer"></div>
