update link top

--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -33,7 +33,7 @@ $('#mobile-menu-open').click(function() {
 	<li><a href="http://watteam.com/video-gallery/">Video Gallery</a></li>
 </ul>
 </li>
-<li><a href="#">Powerbeat</a></li>
+<li><a href="https://watteam.herokuapp.com/products/pbprometer1">Pre-Order</a></li>
 <li><a href="http://watteam.com/contact/">Contact</a></li>
 <div class="claer"></div>
 </ul>
