--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -48,12 +48,17 @@
           <% end %>
         </div>
 
+
+			<% if !current_cart.items.exists?(:product_id => @product.id) %>
         <div class="add-to-cart">
           <%= number_field_tag :quantity, 1, :class => 'title', :min => 1,:max=>1,:readonly => true %>
           <%= button_tag :class => 'large primary', :id => 'add-to-cart-button', :type => :submit do %>
             <%= Spree.t(:add_to_cart) %>
           <% end %>
         </div>
+		<% end %>
+		
+		
       </div>
     <% else %>
         <div id="product-price">
