--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -119,4 +119,12 @@ Irvine CA, 92604 USA.<br>
                 </ul>
             </div>
 			</div>
+			
+<script>
+$( document ).ready(function() {
+$("#add-to-cart-button").click(function(){
+    alert("test");
+});
+});
+</script>
 </footer>
