--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -119,4 +119,25 @@ Irvine CA, 92604 USA.<br>
                 </ul>
             </div>
 			</div>
+			
+			<a href="#divForm" id="btnForm">Load Form</a>
+
+<div id="divForm" style="display:none">
+    <form action="tbd">
+        File: <input type="file" /><br /><br />
+        <input type="submit" />
+    </form>
+</div>
+
+<script type="text/javascript">
+    $("#btnForm").fancybox();
+</script>
 </footer>
+
+<script>
+$( document ).ready(function() {
+$("#add-to-cart-button").click(function(event){
+    event.preventDefault();
+});
+});
+</script>
