--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -129,15 +129,14 @@ Irvine CA, 92604 USA.<br>
     </form>
 </div>
 
-<script type="text/javascript">
-    $("#btnForm").fancybox();
-</script>
+
 </footer>
 
 <script>
 $( document ).ready(function() {
 $("#add-to-cart-button").click(function(event){
     event.preventDefault();
+	$("#add-to-cart-button").fancybox();
 });
 });
 </script>
