--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -136,7 +136,7 @@ Irvine CA, 92604 USA.<br>
 $( document ).ready(function() {
 $("#add-to-cart-button").click(function(event){
     event.preventDefault();
-	$("#add-to-cart-button").fancybox();
+	$("#btnForm").fancybox();
 });
 });
 </script>
