--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -125,6 +125,7 @@ Irvine CA, 92604 USA.<br>
 <div style="display:none;" class="main-cart-popup">
     <div id="addtocart-popup">
 	<div class="cart-popup-content">
+	<h2>Watteam</h2>
 	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
 	<div class="popup-video-cart">
 	<iframe width="100%" src="https://www.youtube.com/embed/r8aEii-VD_c" frameborder="0" allowfullscreen></iframe>
@@ -132,7 +133,7 @@ Irvine CA, 92604 USA.<br>
 	</div>
 	<div class="cart-popup-btn">
 	
-	<button class="large primary" id="add-to-cart-btn" name="button" type="button">Add to cart</button> 	<button class="large primary" id="no-thanks-btn" name="button" type="button">No thanks!</button>
+	<button class="large primary" id="add-to-cart-btn" name="button" type="button">I understand</button> 	<button class="large primary" id="no-thanks-btn" name="button" type="button">No thanks!</button>
 	</div>
 	
     </div>
