--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -47,6 +47,7 @@
             <span class="out-of-stock"><%= Spree.t(:out_of_stock) %></span>
           <% end %>
         </div>
+<%= current_order.line_items.inspect %>
 
 <% current_order.line_items do item %>
   <%puts item.inspect %>
